# Q4-assignment-01

./: README.md  hello_agent.ipynb  litellm.ipynb  litellm_yt.ipynb
hello-agent/: readme.md
hello-agent/async-hello-agent/: main.py
lite-llm/: litellm.ipynb
lite-llm/chatbot/: .env  chat_history.json
lite-llm/myproject/: README.md  pyproject.toml
lite-llm/myproject/src/myproject/: hello.py
open-router/: OpenRouter.ipynb  readme.md
uv/: Readme.md
uv/example/: pyproject.toml
uv/example/src/example/: main.py
uv/explore-uv/: pyproject.toml
uv/explore-uv/src/explore_uv/: hello.py
