[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "munibaweb123", email = "munibavirtualuni@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.71.2",
]

[project.scripts]
myproject = "myproject:main"
openai = "myproject.hello:openai"
gemini = "myproject.hello:gemini"
gemini2 = "myproject.hello:gemini2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
