[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "munibaweb123", email = "munibavirtualuni@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
example = "example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
