[project]
name = "explore-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "munibaweb123", email = "munibavirtualuni@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
explore-uv = "explore_uv:main"
hello = "hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
